# openclaw-rust

./: .env.example  .gitignore  API_KEY_GUIDE.md  ARCHITECH_REVIEW.md  ARCHITECTURE_AND_MAINFLOW_ISSUES.md  ARCHITECTURE_REVIEW.md  BUGS_CONFIRMED.md  CHANNELS_ANALYSIS.md  CHANNELS_GUIDE.md  Cargo.toml  OpenClaw-Modules-Audit.md  README.md  rust-toolchain.toml  user_config.example.json
.github/workflows/: ci.yml  release.yml
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: agent.rs  channels.rs  config.rs  control.rs  control_flow.rs  decision.rs  dependencies.rs  device_tool_registry.rs  device_tools.rs  integration.rs  lib.rs  memory_pipeline.rs  mock.rs  orchestrator.rs  ports.rs  presence.rs  provider.rs  real_device_tools.rs  router.rs  session_tree.rs  sessions.rs  sub_agent.rs  task.rs  team.rs  types.rs  ui_tools.rs  voice.rs
crates/openclaw-agent/src/aieos/: mod.rs  parser.rs  prompt.rs  types.rs
crates/openclaw-agent/src/collaboration/: message_bus.rs
crates/openclaw-agent/src/context/: engine.rs  mod.rs
crates/openclaw-agent/src/evo/: adapter.rs  evo_v2_engine.rs  generator_template.txt  knowledge_graph.rs  llm_skill_generator.rs  mod.rs  registry.rs  version_manager.rs
crates/openclaw-agent/src/extension/: mod.rs
crates/openclaw-agent/src/graph/: context.rs  definition.rs  executor.rs  mod.rs  patterns.rs
crates/openclaw-agent/src/memory/: compression.rs  mod.rs
crates/openclaw-agent/src/safety/: abort_control.rs  agent_wrapper.rs  mod.rs  timeout.rs  turn_limiter.rs
crates/openclaw-ai/: Cargo.toml
crates/openclaw-ai/src/: error.rs  failover.rs  lib.rs  models.rs  oauth.rs  stream.rs  tokenizer.rs  types.rs
crates/openclaw-ai/src/providers/: anthropic.rs  base.rs  custom.rs  deepseek.rs  doubao.rs  factory.rs  gemini.rs  glm.rs  kimi.rs  minimax.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  qwen.rs
crates/openclaw-ai/src/tools/: mcp_adapter.rs  mod.rs  wasm_adapter.rs
crates/openclaw-browser/: Cargo.toml
crates/openclaw-browser/src/: browser.rs  lib.rs  page.rs  screenshot.rs  types.rs
crates/openclaw-channels/: Cargo.toml
crates/openclaw-channels/src/: base.rs  bluebubbles.rs  config.rs  dingtalk.rs  discord.rs  dm_policy.rs  email.rs  factory.rs  feishu.rs  googlechat.rs  imessage.rs  lib.rs  manager.rs  matrix.rs  registry.rs  signal.rs  slack.rs  sms.rs  teams.rs  telegram.rs  types.rs  webchat.rs  wecom.rs  whatsapp.rs  zalo.rs  zalo_personal.rs
crates/openclaw-channels/src/discord_gateway/: gateway.rs  handler.rs  metrics.rs  mod.rs  types.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: agent_cmd.rs  api_key_cmd.rs  channel_cmd.rs  daemon_cmd.rs  doctor_cmd.rs  evo_cmd.rs  evo_runner.rs  main.rs  message_cmd.rs  onboard_cmd.rs  providers_cmd.rs  skill_cmd.rs  voice_cmd.rs  wizard_cmd.rs
crates/openclaw-cli/src/commands/: agents.rs  gateway.rs  init.rs  mod.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: config.rs  config_loader.rs  error.rs  group_context.rs  lib.rs  message.rs  session.rs  user_config.rs
crates/openclaw-device/: Cargo.toml
crates/openclaw-device/src/: adapter.rs  camera.rs  capabilities.rs  config.rs  device.rs  device_trait.rs  embedded.rs  framework.rs  hal.rs  lib.rs  location.rs  modules.rs  nodes.rs  notification.rs  platform.rs  registry.rs  screen.rs  system.rs  unified_manager.rs
crates/openclaw-device/src/framework/: can.rs  mqtt.rs  ros2.rs
crates/openclaw-device/src/hal/: gpio.rs  i2c.rs  riscv.rs  serial.rs  spi.rs
crates/openclaw-device/src/hal/riscv/: adc.rs  gpio.rs  i2c.rs  spi.rs  timer.rs  uart.rs
crates/openclaw-device/src/modules/: manager.rs
crates/openclaw-memory/: Cargo.toml
crates/openclaw-memory/src/: ai_adapter.rs  bm25.rs  checkpoint.rs  checkpoint_store.rs  chunk.rs  compressor.rs  config.rs  conflict_resolver.rs  embedding.rs  fact_extractor.rs  factory.rs  file_tracker.rs  file_watcher.rs  graph_context.rs  hybrid_search.rs  knowledge_graph.rs  lib.rs  maintenance_scheduler.rs  manager.rs  pruning.rs  recall.rs  recall_strategy.rs  scorer.rs  store.rs  traits.rs  types.rs  unified_search.rs  working.rs  workspace.rs  workspace_config.rs
crates/openclaw-memory/src/unified_search/: config.rs  fusion.rs  result.rs
crates/openclaw-sandbox/: Cargo.toml
crates/openclaw-sandbox/src/: docker.rs  lib.rs  manager.rs  permission.rs  podman.rs  sandbox.rs  types.rs  wasm.rs
crates/openclaw-sandbox/src/wasm_runtime/: config.rs  integration_tests.rs  mod.rs  runtime_trait.rs  wasmi_runtime.rs  wasmtime_runtime.rs
crates/openclaw-security/: Cargo.toml
crates/openclaw-security/src/: audit.rs  classifier.rs  input_filter.rs  lib.rs  middleware.rs  permission.rs  pipeline.rs  sandbox.rs  self_healer.rs  types.rs  validator.rs
crates/openclaw-server/: Cargo.toml
crates/openclaw-server/src/: acp_service.rs  adapters.rs  agent_service.rs  agentic_rag.rs  agentic_rag_api.rs  api.rs  app_context.rs  browser_api.rs  canvas_api.rs  channel_message_handler.rs  channel_service.rs  config_adapter.rs  device_api.rs  device_manager.rs  gateway.rs  hardware_tools.rs  lib.rs  memory_service.rs  orchestrator.rs  server_config.rs  service_factory.rs  sse.rs  vector_store_registry.rs  voice_service.rs  websocket.rs
crates/openclaw-server/src/agentic_rag/: config.rs  engine.rs  executor.rs  loop_control.rs  planner.rs  reflector.rs
crates/openclaw-server/src/ports/: adapters.rs
crates/openclaw-testing/: Cargo.toml
crates/openclaw-testing/src/: lib.rs
crates/openclaw-voice/: Cargo.toml
crates/openclaw-voice/src/: audio.rs  config.rs  lib.rs  stt.rs  talk_mode.rs  tts.rs  types.rs  voice_agent.rs  wake.rs
crates/openclaw-voice/src/audio/: agc.rs  noise_suppression.rs  stream.rs  vad.rs
crates/openclaw-voice/src/dialogue/: intent.rs  mod.rs  slots.rs
crates/openclaw-voice/src/provider/: mod.rs  registry.rs
crates/openclaw-voice/src/stt/: local.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  (+1 more)
(+59 files in other folders)
