[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-ai",
    "crates/openclaw-memory",
    "crates/openclaw-vector",
    "crates/openclaw-channels",
    "crates/openclaw-agent",
    "crates/openclaw-server",
    "crates/openclaw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["OpenClaw Rust Team"]
license = "MIT"
repository = "https://github.com/openclaw/openclaw-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.12", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.26"

# Vector stores (暂时使用内存存储)
# lancedb = "0.26"  # 需要更新版本
# qdrant-client = "1.13"

# AI providers
async-openai = "0.28"

# Token counting
tiktoken-rs = "0.6"

# Testing
tokio-test = "0.4"

# Internal crates
openclaw-core = { path = "crates/openclaw-core" }
openclaw-ai = { path = "crates/openclaw-ai" }
openclaw-memory = { path = "crates/openclaw-memory" }
openclaw-vector = { path = "crates/openclaw-vector" }
openclaw-channels = { path = "crates/openclaw-channels" }
openclaw-agent = { path = "crates/openclaw-agent" }
openclaw-server = { path = "crates/openclaw-server" }
