[package]
name = "openclaw-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
testing = []

[dependencies]
openclaw-core.workspace = true
openclaw-ai.workspace = true
openclaw-device.workspace = true
openclaw-memory.workspace = true
openclaw-vector.workspace = true
openclaw-security.workspace = true
openclaw-voice.workspace = true
openclaw-channels.workspace = true
openclaw-tools.workspace = true
openclaw-sandbox.workspace = true
openclaw-canvas.workspace = true
openclaw-browser.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
