[package]
name = "openclaw-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-tools.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-openai.workspace = true
tiktoken-rs.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream.workspace = true
urlencoding = "2.1"
