[package]
name = "openclaw-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
base64 = "0.22"
# Headless browser control
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
chromiumoxide_cdp = "0.7"
