[package]
name = "openclaw-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

[features]
default = []
telegram = []
discord = []
whatsapp = []
slack = []
