[package]
name = "openclaw-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
rand = "0.8"

# 钉钉加签支持
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
serde_qs = "0.12"
hex = "0.4"

[features]
default = []
telegram = []
discord = []
whatsapp = []
slack = []
dingtalk = []
wecom = []
feishu = []
