[package]
name = "openclaw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "openclaw-rust"
path = "src/main.rs"

[dependencies]
openclaw-core.workspace = true
openclaw-ai.workspace = true
openclaw-memory.workspace = true
openclaw-vector.workspace = true
openclaw-channels.workspace = true
openclaw-server.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
