[package]
name = "openclaw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "openclaw-rust"
path = "src/main.rs"

[dependencies]
openclaw-core.workspace = true
openclaw-ai.workspace = true
openclaw-memory.workspace = true
openclaw-vector.workspace = true
openclaw-channels.workspace = true
openclaw-voice.workspace = true
openclaw-server.workspace = true
openclaw-sandbox.workspace = true
openclaw-tools.workspace = true
openclaw-device.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
lazy_static = "1.4"

clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
dirs = "5.0"
dialoguer = "0.11"
