[package]
name = "openclaw-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hal = []
framework = []
ros2 = ["framework"]
mqtt = ["framework"]
can = ["framework"]
gpio = ["hal"]
i2c = ["hal"]
spi = ["hal"]
serial = ["hal"]

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-tools = { path = "../openclaw-tools" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
base64.workspace = true
arboard.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
