[package]
name = "openclaw-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hal = []
framework = []

# RISC-V 平台
riscv = []
esp32 = ["riscv"]
k210 = ["riscv"]
sipeed = ["k210"]

# 传感器驱动
sensor-bme280 = ["riscv"]
sensor-mpu6050 = ["riscv"]

# 显示驱动
display-ssd1306 = ["riscv"]
display-st7789 = ["riscv"]

# 无线驱动
wireless-espnow = ["esp32"]
wireless-ble = ["riscv"]
wireless-lora = ["riscv"]

# 框架
ros2 = ["framework"]
mqtt = ["dep:mqtt", "dep:rumqttc", "framework"]
can = ["framework"]

# HAL
gpio = ["hal"]
i2c = ["hal"]
spi = ["hal"]
serial = ["hal"]

[dependencies]
openclaw-core.workspace = true
openclaw-tools.workspace = true

async-trait = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
base64.workspace = true
arboard.workspace = true

mqtt = { workspace = true, optional = true }
rumqttc = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
