[package]
name = "openclaw-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["native", "wasm-runtime-wasmtime"]
sandbox-wasm = []
sandbox-docker = []
native = []

# WASM 运行时选择
wasm-runtime-wasmtime = ["dep:wasmtime"]
wasm-runtime-wasmi = ["dep:wasmi"]

# credential 相关
credential-vault = []
credential-keyring = []
credential-audit = []
credential-rotation = []
credential-sqlite = ["dep:rusqlite"]

full-security = ["credential-vault", "credential-keyring", "credential-audit", "credential-rotation", "credential-sqlite"]

[dependencies]
openclaw-core.workspace = true
openclaw-security.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
regex.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

wasmtime = { version = "25.0", optional = true }
wasmi = { version = "0.31", optional = true }
bollard = "0.18"
base64 = { version = "0.22", features = ["std"] }

[dev-dependencies]
tempfile.workspace = true
