[package]
name = "openclaw-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openclaw-core = { path = "../openclaw-core" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
regex.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
