[package]
name = "openclaw-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
mockall = "0.13"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

openclaw-core.workspace = true
openclaw-ai.workspace = true
openclaw-agent.workspace = true
openclaw-device.workspace = true
openclaw-channels.workspace = true

[dev-dependencies]
tokio-test.workspace = true
